# alterstack

./: CMakeLists.txt  README.md
cmake/: AddExternalBoost.cmake  AddExternalCatch.cmake  AddExternalCpuUtils.cmake  AddExternalCrashLog.cmake
cmake/patch/: Catch.CMakeLists.txt
doc/: MainPage.dox  doxygen.conf
doc/UML/: README.txt  RunningQueue.xml  Scheduler.xml
include/: mpmc_queue.cc
include/alterstack/: Api.hpp  AtomicGuard.hpp  Awaitable.hpp  BgRunner.hpp  BgrThread.hpp  Context.hpp  CpuCore.hpp  Logger.hpp  NativeInfo.hpp  Scheduler.hpp  SpinLock.hpp  Stack.hpp  Task.hpp  TaskQueue.hpp  TaskState.hpp  running_queue.hpp  task_buffer.hpp  task_stack.hpp
src/: Awaitable.cpp  BgRunner.cpp  BgrThread.cpp  CpuCore.cpp  Scheduler.cpp  Stack.cpp  StaticsInit.cpp  Task.cpp  TaskQueue.cpp
test/: CMakeLists.txt  Factorial.cpp  Gai_test.cpp  Run.cpp  RunTasks.cpp  TaskRun.cpp  TaskRunSimple.cpp  TaskWait.cpp  TaskYield.cpp  TestGai.cpp  catch_main.cpp  running_queue.cpp  task_buffer.cpp  task_stack.cpp
test/load_test/: load_running_queue.cpp  load_task_buffer.cpp
